--- a/1.5/index.html
+++ b/1.5/index.html
@@ -76,6 +76,6 @@
   </div>
 </section>
 <script src="js/swiper-bundle.min.js"></script>
-<script src="js/script.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
