--- a/1.5/index.html
+++ b/1.5/index.html
@@ -10,6 +10,7 @@
   <title>Document</title>
 </head>
 <body>
+<script  src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>"
 <section class="brands">
   <div class="brands__title title">
     <h2 class="title__text">Ремонт техники различных брендов</h2>
